--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/runtime": "^7.7.7",
     "@lucky-canvas/taro": "^0.0.14",
     "@taroify/core": "0.1.0-alpha.1",
+    "@taroify/icons": "0.1.0-alpha.2",
     "@tarojs/components": "3.6.7",
     "@tarojs/helper": "3.6.7",
     "@tarojs/plugin-framework-react": "3.6.7",
