--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "@unocss/webpack": "^0.54.0",
     "babel-preset-taro": "3.6.7",
     "eslint": "^8.12.0",
     "eslint-config-taro": "3.6.7",
@@ -77,6 +78,8 @@
     "stylelint": "^14.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.1.0",
+    "unocss": "^0.54.0",
+    "unocss-preset-weapp": "^0.54.0",
     "webpack": "5.78.0"
   }
 }
