--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@tarojs/runtime": "3.6.7",
     "@tarojs/shared": "3.6.7",
     "@tarojs/taro": "3.6.7",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
