--- a/package.json
+++ b/package.json
@@ -56,7 +56,11 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
